--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
   }
   
   .background-container {
-    background-image: url('Fundo.png');
+    background-image: url('../Fundo.png');
     background-size: cover;
     background-position: center;
     min-height: 100vh;
