--- a/style.css
+++ b/style.css
@@ -26,12 +26,13 @@
   }
   
   .background-container {
-    background-image: url('Fundo.png');
-    background-size: cover;
-    background-position: center;
-    min-height: 100vh;
-    width: 100%;
-  }
+  /* background-image: url('Fundo.png'); */
+  background-color: #3570a1;
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
+  width: 100%;
+}
   
   /* Seção Head */
   .head-section {
