--- a/style.css
+++ b/style.css
@@ -194,4 +194,33 @@
       width: 220px;
     }
   }
+
+.divider {
+  overflow: hidden;
+  width: 100%;
+  height: auto; /* ajuste conforme altura da imagem */
+  position: relative;
+}
+
+.scrolling-bar {
+  display: flex;
+  width: fit-content;
+  animation: slideLeft 15s linear infinite;
+}
+
+.scrolling-bar img {
+  width: auto;
+  height: 100%; /* ou altura fixa como 40px, se desejar */
+  flex-shrink: 0;
+}
+
+@keyframes slideLeft {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
   
