--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@
   
   .cta-section {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 0px;
     margin-bottom: -30px;
   }
   
@@ -153,6 +153,7 @@
 
 .footer-logo {
   max-width: 100px;
+  align-content: center;
   margin-top: 30px;
   display: block;
 }
