--- a/style.css
+++ b/style.css
@@ -153,8 +153,7 @@
 
 .footer-logo {
   max-width: 100px;
-  align-content: center;
-  margin-top: 30px;
+  margin: 30px auto 0 auto; /* top: 30px | left/right: auto | bottom: 0 */
   display: block;
 }
 
